syntax = "proto3";

option csharp_namespace = "AdderService";

package calculator;

service ServiceAdder{
  rpc Add (AddRequest) returns (AddResponse);
}

service ServiceString{
  rpc Concatenate (ConcatenateRequest) returns (ConcatenateResponse);
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 result = 1;
}

message ConcatenateRequest {
  string str1 = 1;
  string str2 = 2;
}

message ConcatenateResponse {
  string result = 1;
}